--- a/default/default.css
+++ b/default/default.css
@@ -1,13 +1,36 @@
 
 #main {
   padding: .5em;
+  background-color: black;
+}
+
+#container {
+  padding-top: 3em;
+  padding-left: 3em;
+}
+
+/* alien style */
+
+.osc-slider, .osc-wheel {
+  -webkit-box-shadow: 0px 0px 2.5em #34ff25;
+  border: solid 2px white;
 }
 
 .osc-slider {
   width: 5em;
-  height: 25em;
-  border: solid .5em #333;
+  height: 37em;
+  margin-left: .5em;
   -webkit-border-radius: 5em;
+/*  background-image: -webkit-gradient(
+    linear,
+    0% 0%,
+    0% 100%,
+    from(black),
+    to(gray)
+  );*/
+/*  position: relative;
+  z-index: -2;
+*/
 }
 
 .osc-slider-pointer {
@@ -15,7 +38,14 @@
   margin-right: auto;
   width: 4em;
   height: 4em;
-  border: solid black .5em;
+  border: solid #222 .5em;
+  background-image: -webkit-gradient(
+    linear,
+    0% 0%,
+    0% 100%,
+    from(black),
+    to(gray)
+  );
   -webkit-border-radius: 4em;
   position: absolute;
   z-index: -1;
@@ -26,23 +56,34 @@
   line-height: 1em;
   font-family: Century Gothic;
   font-size: 3em;
+  color: white;
 }
 
 .osc-touch {
   height: 35em;
-  border: solid .5em black;
-  background: #efefef;
+  border: solid .5em #333;
+  background-image: -webkit-gradient(
+    linear,
+    0% 0%,
+    100% 100%,
+    from(black),
+    to(#222)
+  );
 }
 
 .osc-wheel {
   width: 5em;
   height: 5em;
+  float: left;
+  padding: 0 .5em;
+  margin-right: 1em;
+  -webkit-border-radius: 5em;
 }
 
 .osc-wheel-pointer {
   width: 4em;
   height: 4em;
-  border: solid .5em black;
+  border: solid .5em #333;
   -webkit-border-radius: 5em;
   background-image: -webkit-gradient(
     radial,
@@ -50,10 +91,10 @@
     5,
     50% 0%,
     5,
-    color-stop(0.0, white),
-    color-stop(0.5, white),
+    color-stop(0.0, black),
     color-stop(0.5, black),
-    color-stop(1.0, black)
+    color-stop(0.5, gray),
+    color-stop(1.0, gray)
   );
   position: absolute;
   z-index: -1;
@@ -62,7 +103,10 @@
 .osc-momentary {
   width: 4em;
   height: 4em;
-  border: solid .5em black;
+  border: solid .5em #333;
+  float: left;
+  margin-left: .5em;
+  margin-right: 1.5em;
   -webkit-border-radius: 1em;
 }
 
@@ -85,9 +129,12 @@
 .osc-on-off {
   width: 4em;
   height: 4em;
-  border: solid .5em black;
+  border: solid .5em #333;
+  float: left;
+  margin-left: .5em;
+  margin-right: 1.5em;
 }
 
 .osc-on-off-active {
-  background-color: black;
+  background-color: gray;
 }
